# Discordoragi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
bot/: discordoragi.py
cogs/: search.py
discordoragi/: run.py
discordoragi/bot/: __init__.py  discordoragi.py
discordoragi/cogs/: search.py
discordoragi/helpers/: database_helpers.py
helpers/: __init__.py  database_helpers.py
